- Fixed Hero section greeting displaying behind navbar in mobile layout
- Tweaked shrink rate(s) for all text to optimize for smaller screen sizes

--- a/components/component_styles/Header.module.css
+++ b/components/component_styles/Header.module.css
@@ -82,8 +82,6 @@
     flex-direction: column;
     align-items: center;
     gap: 5px;
-    position: relative;
-    top: 118px;
 }
 
 .menu__links hr {
@@ -100,9 +98,9 @@
     }
 
     .navbar {
-        position: absolute;
         height: 118px;
         padding: 14px 14px 10px 14px;
+        position: static;
     }
 
     .menu__button {
@@ -120,7 +118,7 @@
     }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 641px) and (max-width: 768px) {
     .navbar {
         font-size: 1.6rem;
     }
