--- a/components/component_styles/Hero.module.css
+++ b/components/component_styles/Hero.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .content section {
@@ -59,6 +60,7 @@
 
 .buttons {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
@@ -82,7 +84,36 @@
 
 /* || Queries */
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 640px) {
+    .content {
+        margin: 0 clamp(15px, 10vw, 70px);
+        justify-content: flex-start;
+        padding-top: 120px;
+    }
+
+    .title_greet, .button {
+        font-size: clamp(1.2rem, 2vw , 2rem);
+    }
+
+    .title_name a{
+        font-size: clamp(4rem, 8vw, 8.5rem);
+    }
+
+    .title_statement {
+        font-size: clamp(3rem, 8vw, 8rem);
+    }
+
+    .description {
+        font-size: clamp(1.3rem, 2vw, 1.6rem);
+        font-weight: 900;
+    }
+
+    .button {
+        width: clamp(110px, 2vw, 150px);
+    }
+}
+
+@media only screen and (min-width: 641px)and (max-width: 1000px) {
     .content {
         margin: 0 clamp(15px, 10vw, 70px);
     }
